--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -17,7 +17,7 @@
     <com.google.android.material.textfield.TextInputEditText
         android:hint="Email"
         android:inputType="textEmailAddress"
-
+        android:text="test@gmail.com"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -32,6 +32,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:hint="Password"
             android:inputType="textPassword"
+            android:text="123456"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
